# ibex_bluesky_core

./: .buildinfo  .gitignore  .vale.ini  LICENSE  README.md  _api.html  architectural_decisions.html  developer_information.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  replotting_scans.html  ruff.toml  search.html  searchindex.js
.doctrees/: _api.doctree  architectural_decisions.doctree  codeautolink-cache.json  developer_information.doctree  environment.pickle  index.doctree  replotting_scans.doctree
.doctrees/architectural_decisions/: 001-repo-structure.doctree  002-use-ophyd-async.doctree  003-run-in-process.doctree  004-use-scipp.doctree  005-variance-addition.doctree  006-where-to-put-code.doctree  007-output-file-archiving.doctree  008-centre-of-mass.doctree  009-kafka-streaming.doctree
.doctrees/callbacks/: centre_of_mass.doctree  custom_callback.doctree  docs_logging_callback.doctree  file_writing.doctree  fitting.doctree  isiscallbacks.doctree  plotting.doctree
.doctrees/dev/: archiving.doctree  create_a_release.doctree  kafka.doctree  logging.doctree  manual_system_testing.doctree  rbnumberpp.doctree  set_up_dev_environment.doctree  sphinx_notes.doctree  troubleshooting.doctree
.doctrees/devices/: blocks.doctree  dae.doctree
.doctrees/fitting/: fitting.doctree  livefit_logger.doctree  standard_fits.doctree
.doctrees/plan_stubs/: external_code.doctree  matplotlib_helpers.doctree  plan_wrappers.doctree  polling.doctree  redefining.doctree  user_input.doctree
.doctrees/plans/: plans.doctree  reflectometry.doctree
.doctrees/preprocessors/: rbnumberpp.doctree
.doctrees/tutorial/: concepts.doctree  first_time_setup.doctree  overview.doctree  user_cheat_sheet.doctree
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/codeql/: codeql-config.yml
.github/styles/: vocab.txt
.github/workflows/: Lint-and-test.yml  Linter Workflow  Linter.yml  check_pr_has_label.yml  documentation.yml  lint-and-test-nightly  lint-and-test-nightly.yml  release.yml  test-against-main.yml
_modules/: index.html
_modules/ibex_bluesky_core/: callbacks.html  devices.html  fitting.html  log.html  plan_stubs.html  plans.html  preprocessors.html  run_engine.html  utils.html
_sources/: architectural_decisions.md.txt  developer_information.md.txt  index.md.txt  index.rst.txt  replotting_scans.md.txt
_sources/architectural_decisions/: 001-repo-structure.md.txt  002-use-ophyd-async.md.txt  003-run-in-process.md.txt  004-use-scipp.md.txt  005-variance-addition.md.txt  006-where-to-put-code.md.txt  007-output-file-archiving.md.txt  009-kafka-streaming.md.txt
_sources/callbacks/: centre_of_mass.md.txt  docs_logging_callback.md.txt  file_writing.md.txt  fitting.md.txt  isiscallbacks.md.txt  plotting.md.txt
_sources/dev/: archiving.md.txt  kafka.md.txt  manual_system_testing.md.txt  rbnumberpp.md.txt  set_up_dev_environment.md.txt  troubleshooting.md.txt
_sources/devices/: blocks.md.txt  dae.md.txt
_sources/fitting/: fitting.md.txt  livefit_logger.md.txt  standard_fits.md.txt
_sources/plan_stubs/: external_code.md.txt  matplotlib_helpers.md.txt  plan_wrappers.md.txt  polling.md.txt  redefining.md.txt  user_input.md.txt
_sources/plans/: plans.md.txt  reflectometry.md.txt
_sources/tutorial/: overview.md.txt  user_cheat_sheet.md.txt
architectural_decisions/: 001-repo-structure.html  002-use-ophyd-async.html  003-run-in-process.html  004-use-scipp.html  005-variance-addition.html  006-where-to-put-code.html  007-output-file-archiving.html  008-centre-of-mass.html  009-kafka-streaming.html
callbacks/: centre_of_mass.html  custom_callback.html  docs_logging_callback.html  file_writing.html  fitting.html  isiscallbacks.html  plotting.html
callbacks/fitting/: chained_fitting.html  fitting.html  livefit_logger.html  standard_fits.html
dev/: archiving.html  create_a_release.html  kafka.html  logging.html  manual_system_testing.html  rbnumberpp.html  set_up_dev_environment.html  sphinx_notes.html  troubleshooting.html
devices/: blocks.html  dae.html
doc/: _api.rst  blocks.md  conf.py  create_a_release.md  docs_logging_callback.md  fitting.md  index.md  index.rst  plotting.md  set_up_dev_environment.md  spelling_wordlist.txt  standard_fits.md
doc/callbacks/: fitting.md  (+6 more)
fitting/: fitting.html  livefit_logger.html  standard_fits.html
manual_system_tests/: continuous_scan.py  dae_mapping_scan.py  dae_scan.py  interruption.py  polref_autoalign.py
plan_stubs/: external_code.html  matplotlib_helpers.html  plan_wrappers.html  polling.html  redefining.html  user_input.html
plans/: plans.html  reflectometry.html
preprocessors/: rbnumberpp.html
tests/: conftest.py  test_document_logging_callback.py  test_log.py  test_plan_stubs.py  test_preprocessors.py  test_run_engine.py  test_utils.py
tutorial/: concepts.html  first_time_setup.html  overview.html  user_cheat_sheet.html
(+298 files in other folders)
